--- a/eshop/src/e_shop/templates/admin/base.jinja
+++ b/eshop/src/e_shop/templates/admin/base.jinja
@@ -47,7 +47,7 @@
 						<li class="has-dropdown">
 							<a href="#" class="user-name">
 								<div class="user-header-photo">
-									<img src="{{ static("images/unknown.svg") }}" style="top:-0.6rem;" />
+									<img ng-src="{{ '{{' }} base.userPhoto {{ '}}' }}" style="top:-0.55rem;" />
 								</div>
 								<span>{{ user.username }}</span>
 							</a>
